# tttc_practice

clang/examples/: CMakeLists.txt
plugins/TypeInfoPlugin/: README.md
plugins/TypeInfoPlugin/TypeInfoPlugin/: CMakeLists.txt  FunctionInstrumenter.cpp  InstrumentedTypeInfoPlugin.cpp  TypeInfoPlugin.cpp
plugins/TypeInfoPlugin/tests/: test.cpp  test_instrumentation.cpp
